--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,8 @@
       </h1>
     </td>
     <td class="sidebar round">
-      <strong>Name</strong> <%= @user.name %><br />
-      <strong>URL</strong>  <%= link_to user_path(@user), @user %>
+      
+	  <br /> <a href=  /signout> <strong>Sign out? <strong></a>
     </td>
   </tr>
 </table>
