--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,52 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= @title %></title>
     <%= csrf_meta_tag %>
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->    
+ <%= javascript_include_tag :defaults %>
+       
     <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
     <%= stylesheet_link_tag 'blueprint/print',  :media => 'print' %>
-    <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
+   
     <%= stylesheet_link_tag 'custom', :media => 'screen' %>
   </head>
   <body>
-    <div class="container">
+    <div >
       
-
-	<header>
-	  <% logo = image_tag("logo.png", :alt => "Sample App", :class => "round") %>
-	  <%= link_to logo, root_path %>
-	  <nav class="round">
-	    <ul>
-	      <li><%= link_to "Home", root_path %></li>
-	      <li><%= link_to "Help", help_path %></li>
-	      <li><%= link_to "Sign in", '#' %></li>
-	    </ul>
-	  </nav>
-	</header>
-
-
+	
 
       <section class="round">
+		<% flash.each do |key, value| %>
+		          <div class="flash <%= key %>"><%= value %></div>
+		  <% end %>
 		
         <%= yield %>
       </section>
-
-	<footer>
-	  <nav class="round">
-	    <ul>
-	      <li><%= link_to "About", about_path %></li>
-	      <li><%= link_to "Contact", contact_path %></li>
-	      <li><a href="http://news.railstutorial.org/">News</a></li>
-	      <li><a href="http://www.railstutorial.org/">Rails Tutorial</a></li>
-	    </ul>
-	  </nav>
-	</footer>
-	
-	
-	<%= debug(params) if Rails.env.development? %>
+	 
     </div>
   </body>
 </html>
